Фиксация изменений и тестов