@@ -8,7 +8,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import ru.smartjava.backend.config.Constants;
 import ru.smartjava.backend.entity.FileItem;
-import ru.smartjava.backend.exceptions.CustomInternalServerError;
+import ru.smartjava.backend.exceptions.CustomBadRequestException;
+import ru.smartjava.backend.exceptions.CustomInternalServerErrorException;
 import ru.smartjava.backend.repositories.FileRepository;
 
 import java.io.File;
@@ -17,6 +18,7 @@ import java.net.URI;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -33,7 +35,7 @@ public class FileServiceImpl implements FileService {
                 .getFileList(numberFiles)
                 .stream()
                 .map(file -> new FileItem(file.getName(), Math.toIntExact(file.length())))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -41,10 +43,10 @@ public class FileServiceImpl implements FileService {
         Optional<File> fileToDelete = fileRepository.findFile(fileName);
         if (fileToDelete.isPresent()) {
             if (!fileRepository.deleteFile(fileToDelete.get())) {
-                throw new CustomInternalServerError(String.format("%s: %s", Constants.fileDeleteError,fileName));
+                throw new CustomInternalServerErrorException(String.format("%s: %s", Constants.fileDeleteError,fileName));
             }
         } else {
-            throw new CustomInternalServerError(String.format("%s: %s", Constants.fileNotFound, fileName));
+            throw new CustomBadRequestException(String.format("%s: %s", Constants.fileNotFound, fileName));
         }
     }
 
@@ -65,12 +67,12 @@ public class FileServiceImpl implements FileService {
                 return resource;
             }
         }
-        throw new CustomInternalServerError(String.format("%s: %s", Constants.fileNotFound, fileName));
+        throw new CustomBadRequestException(String.format("%s: %s", Constants.fileNotFound, fileName));
     }
 
     public void storeFile(MultipartFile file) {
         if(!fileRepository.saveFile(file)) {
-            throw new CustomInternalServerError(String.format("%s: %s", Constants.saveFileError, file.getName()));
+            throw new CustomInternalServerErrorException(String.format("%s: %s", Constants.saveFileError, file.getName()));
         };
     }
 
@@ -79,10 +81,10 @@ public class FileServiceImpl implements FileService {
         File destinationFile = new File(fileStorePath + "/" + destinationFileName);
         if (sourceFile.exists()) {
             if (!fileRepository.renameFile(sourceFile, destinationFile)) {
-                throw new CustomInternalServerError(String.format("%s из %s в %s", Constants.renameFileError, sourceFileName, destinationFileName) );
+                throw new CustomInternalServerErrorException(String.format("%s из %s в %s", Constants.renameFileError, sourceFileName, destinationFileName) );
             }
         } else {
-            throw new CustomInternalServerError(String.format("%s: %s", Constants.sourceFileAbsent, sourceFileName));
+            throw new CustomBadRequestException(String.format("%s: %s", Constants.sourceFileAbsent, sourceFileName));
         }
     }
 
